--- a/wbwcrm-frontend-js/package.json
+++ b/wbwcrm-frontend-js/package.json
@@ -17,10 +17,12 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-state-sync": "^3.1.4",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
