--- a/wbwcrm-frontend-js/package.json
+++ b/wbwcrm-frontend-js/package.json
@@ -11,12 +11,15 @@
     "bootstrap": "^5.2.0",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-multi-select": "^0.1.0",
     "react-multi-select-component": "^4.3.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
+    "react-select-search": "^4.1.2",
     "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
