--- a/wbwcrm-backend/package.json
+++ b/wbwcrm-backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "email-validator": "^2.0.4",
     "eslint": "^8.22.0",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
