--- a/wbwcrm-frontend-js/package.json
+++ b/wbwcrm-frontend-js/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.2",
     "cors": "^2.8.5",
+    "moment-timezone": "^0.5.37",
     "react": "^18.2.0",
     "react-admin": "^4.4.0",
     "react-big-calendar": "^1.5.0",
