--- a/wbwcrm-frontend-js/package.json
+++ b/wbwcrm-frontend-js/package.json
@@ -21,6 +21,7 @@
     "react-big-calendar": "^1.5.0",
     "react-bootstrap": "^2.5.0",
     "react-confirm-alert": "^3.0.6",
+    "react-datetime-picker": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-multi-select": "^0.1.0",
     "react-multi-select-component": "^4.3.3",
