--- a/wbwcrm-backend/package.json
+++ b/wbwcrm-backend/package.json
@@ -17,6 +17,7 @@
     "email-validator": "^2.0.4",
     "eslint": "^8.22.0",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "mysql2": "^2.3.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
